// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fields properties should collect fields info 1`] = `
Object {
  "filtrable": Array [
    Object {
      "filtrable": true,
      "name": "c",
      "type": Object {
        "name": "Any",
      },
    },
  ],
  "listable": Array [
    Object {
      "listable": true,
      "name": "b",
      "type": Object {
        "name": "Any",
      },
    },
  ],
  "sortable": Array [
    Object {
      "name": "a",
      "sortable": true,
      "type": Object {
        "name": "Any",
      },
    },
  ],
}
`;

exports[`Fields properties should extend fields info 1`] = `
Object {
  "filtrable": Array [],
  "listable": Array [
    Object {
      "listable": true,
      "name": "b",
      "type": Object {
        "name": "Any",
      },
    },
    Object {
      "listable": true,
      "name": "d",
    },
  ],
  "sortable": Array [
    Object {
      "name": "a",
      "sortable": true,
      "type": Object {
        "name": "Any",
      },
    },
  ],
}
`;
